# SandyAQ

./: .gitignore  README.md
python_wrappers/: FastProcessing.py  FitSPE.py  PostProcessing.py  SingleCalibration.py  WaveformProcessor.py  gain_analysis.py  run_selection.py  run_selection_single_channel.py  tmp_unify_data_format.py  util.py
python_wrappers/common/: d2d.py
python_wrappers/config/: common_config.ini  data_processing_config.ini  data_taking_config.ini  gain_analysis_config.ini
python_wrappers/data_management/: GenGainCSV.py  GenRunSelectCSV_SC.py
python_wrappers/notebooks/: all_channel_analysis.ipynb  compare_rise_time.ipynb  fast_wf_check.ipynb  fast_wf_check_development.ipynb  gain_analysis.ipynb  test_all_channel.ipynb  test_single_calibration.ipynb
python_wrappers/src/common/: config_reader.py  d2d.py  logger.py  metadata_handler.py  run_info.py  utils.py
python_wrappers/src/data_management/: unify_data_format.py
python_wrappers/src/data_processing/: event_processor.py  fast_processor.py  run_info.py  run_processor.py  waveform_processor.py
python_wrappers/util/: utils.py
sandyaq/: CMakeLists.txt  ConfigGenerator.cc  main.cc  multiV1742.ini  multiboard.ini  multiboard.txt
sandyaq/config/: config_template.ini  multiboard_template.ini  multiboard_test.ini
sandyaq/inc/: CommonConfig.hh  Digitizer.hh  GlobalControl.hh  Utils.hh  V1725.hh  V1742.hh
sandyaq/indevel/: V1720.cc  V1720.hh
sandyaq/src/: CommonConfig.cc  Digitizer.cc  V1725.cc  V1742.cc  WDconfig.c
test_scripts/: a.out  testsync.cc
(+6 files in other folders)
